--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,7 +47,7 @@ body {
   box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
   -webkit-box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
   -moz-box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
-  background-image: url(https://res.cloudinary.com/dmuggkwp1/image/upload/v1733306209/A4-full-logo-vector-vertical_jqnh4h.png);
+  background-image: url(https://res.cloudinary.com/dmuggkwp1/image/upload/v1733367055/Desain_tanpa_judul_4_rnzq4e.png);
   background-position: center; /* This will center the image */
   background-repeat: no-repeat; /* Prevent the image from repeating */
   background-size: cover; /* Make the background cover the entire div */
@@ -6633,4 +6633,39 @@ table.table-keputusan tr td {
   table.unvalidated tr td {
     font-size: 22px;
   }
+}
+
+.title-container {
+  margin-top: 35px;
+  text-align: center;
+}
+
+.title-container .logo {
+  width: 80px;
+  margin-bottom: 40px;
+}
+
+.title-container > .title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 22px;
+  font-weight: 700 !important;
+  line-height: 1.6;
+}
+
+.title {
+  text-transform: uppercase;
+  font-size: 22px;
+  font-weight: 700 !important;
+  line-height: 1.6;
+}
+
+#petunjukPengisian {
+  text-align: justify;
+  line-height: 2;
+}
+
+#petunjukPengisian p {
+  text-align: justify;
+  line-height: 1.5;
 }
