--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6163,6 +6163,15 @@ body {
   background-size: cover; /* Make the background cover the entire div */
 }
 
+.my_background {
+  box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
+  -webkit-box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
+  -moz-box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
+  background-position: center; /* This will center the image */
+  background-repeat: no-repeat; /* Prevent the image from repeating */
+  background-size: cover; /* Make the background cover the entire div */
+}
+
 .subpage {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 11px;
